--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <div class="row">
           <div class="containers">
               <div class="image">
-                 <img class="imgs" src="bikeu.jpg">
+                 <img class="imgs" src="shop.2.png">
               </div>
                <div class="content">
                <h2>Greetings, dear customers</h2> <br>
